<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/DictionaryMalay" />

        <ImageView
            android:id="@+id/DictionaryQuestionImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/pressnext" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/DictionaryOptionA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/OptionA" />

            <Button
                android:id="@+id/DictionaryOptionB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/OptionB" />

            <Button
                android:id="@+id/DictionaryOptionC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/OptionC" />
            </LinearLayout>
               <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/DictionaryOptionD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/OptionD" />

            <Button
                android:id="@+id/DictionaryOptionE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/OptionE" />

            <Button
                android:id="@+id/DictionaryOptionF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/OptionF" />
            </LinearLayout>
               <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            </LinearLayout>
               <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/DictionaryAnswerText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Answer" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>
