<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.learnmalay.StudentActivity"
    android:background="#e7a55a" >

    <TextView
        android:id="@+id/Usernametv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/WelcomeMalay"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/Exercisebtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Tutorialbtn"
        android:layout_below="@+id/Tutorialbtn"
        android:layout_marginTop="31dp"
        android:text="@string/Exercise" />

    <Button
        android:id="@+id/Tutorialbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Usernametv"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="153dp"
        android:text="@string/TutorialMalay" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Usernametv"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:text="@string/Studentmsg"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/Logoutbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Exercisebtn"
        android:layout_below="@+id/Exercisebtn"
        android:layout_marginTop="38dp"
        android:text="@string/Logout" />

</RelativeLayout>
