<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e7a55a"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.learnmalay.TutorialActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text="@string/TutorialMalay"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/Verbbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Garamarbtn"
        android:layout_below="@+id/Garamarbtn"
        android:layout_marginTop="23dp"
        android:text="@string/VerbMalay" />

    <Button
        android:id="@+id/Dictionarybtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Verbbtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:text="@string/DictionaryMalay" />

    <Button
        android:id="@+id/Garamarbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Dictionarybtn"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="78dp"
        android:text="@string/GaramarMalay" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Dictionarybtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:text="@string/tutorialmsg"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>