<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e7a55a"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.learnmalay.GrammarActivity" >

    <Button
        android:id="@+id/Modulebutton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Modulebutton2"
        android:layout_below="@+id/Modulebutton2"
        android:layout_marginTop="26dp"
        android:text="@string/module3" />

    <Button
        android:id="@+id/Modulebutton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="129dp"
        android:text="@string/Module2" />

    <Button
        android:id="@+id/Modulebutton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="52dp"
        android:text="@string/module_1" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Modulebutton2"
        android:layout_alignParentTop="true"
        android:layout_marginTop="54dp"
        android:text="@string/GaramarMalay"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>