<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e7a55a"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.learnmalay.ExerciseActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/Exercise"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/GrammarExerciseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/GaramarMalay" />

    <Button
        android:id="@+id/VerbExerciseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/GrammarExerciseButton"
        android:layout_below="@+id/GrammarExerciseButton"
        android:layout_marginTop="36dp"
        android:text="@string/VerbMalay" />

    <Button
        android:id="@+id/DictionaryExerciseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/VerbExerciseButton"
        android:layout_below="@+id/VerbExerciseButton"
        android:layout_marginTop="39dp"
        android:text="@string/DictionaryMalay" />

</RelativeLayout>
